# cpp_cmake_boost_bio

./: .gitmodules  CMakeLists.txt  LICENSE.md  README.md  foo.h  main.cpp
opt/: CMakeLists.txt  boost.cmake  boost.patch  bzip2.cmake  hdf5.cmake  opt.cmake
src/: BuildInfo.h.cmake.in  CMakeConfig.h.in  CMakeLists.txt  bare.cpp  ccbb.cpp
src/bio/: Alignment.h  Bam.h  Base.h  Fai.h  Forward.h  Locus.h  LocusWindow.h  References.h
src/bio/alignment/: Aligner.h  Alignment.h
src/bio/sambam/local/: Sam.h  StdinSAM.h
src/bio/sambam/seqan/: Bam.h  ReadBAM.h
src/bio/seq/: SeqBase.h  SeqMeta.h  SeqUtil.h
src/cmake/: sub_dir_list.cmake
src/foo/: CMakeLists.txt  foo.cpp  foo.h
src/modules/: CMakeLists.txt  dispatch.cpp  dispatch.h  module_list.h.in  modules.cmake  modules.h
src/modules/bamtest/: CMakeLists.txt  Options.h  main.cpp  main.h
src/modules/faitest/: CMakeLists.txt  Options.h  main.cpp  main.h
src/modules/samintest/: Options.h  main.cpp  main.h
src/modules/sandbox/: .main.cpp.swp  CMakeLists.txt  main.cpp  main.h
src/modules/seqtest/: CMakeLists.txt  Options.h  main.cpp  main.h
src/modules/vcftest/: CMakeLists.txt  Options.h  main.cpp  main.h
src/util/: BuildInfo.h.cmake.in  BuildInfo.h.in  LazyAllocMatrix.h  LazyAllocVector.h  Logging.h  Monitor.h  PeriodicAdaptor.h  ProgramOptions.h  Range.h  StatsLogger.h  StdinByLine.h
